@@ -310,13 +310,11 @@ Also see `ignore'."
 ;; Macro `connection-local-p' is new in Emacs 30.1.
 (if (macrop 'connection-local-p)
     (defalias 'tramp-compat-connection-local-p #'connection-local-p)
-  (defmacro tramp-compat-connection-local-p (variable &optional application)
-    "Non-nil if VARIABLE has a connection-local binding in `default-directory'.
-If APPLICATION is nil, the value of
-`connection-local-default-application' is used."
+  (defmacro tramp-compat-connection-local-p (variable)
+    "Non-nil if VARIABLE has a connection-local binding in `default-directory'."
     `(let (connection-local-variables-alist file-local-variables-alist)
        (hack-connection-local-variables
-	(connection-local-criteria-for-default-directory ,application))
+	(connection-local-criteria-for-default-directory))
        (and (assq ',variable connection-local-variables-alist) t))))
 
 (dolist (elt (all-completions "tramp-compat-" obarray 'functionp))
