@@ -1,3 +1,8 @@
+2023-12-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-compat.el (tramp-compat-connection-local-p): Make it
+	compatible with Emacs 27.
+
 2023-12-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-compat.el (tramp-compat-connection-local-p): New macro.
